set hotel description for its cells

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:name=".ListRestaurantActivity"
             android:exported="false" />
         <activity
+            android:label="Hotels"
             android:name=".ListHotelActivity"
             android:exported="false" />
         <activity
