added detail for tourist spot

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name=".DetailHotel"
             android:exported="false" />
         <activity
+            android:name=".DetailTourSpot"
+            android:exported="false" />
+        <activity
             android:name=".ListTourSpotActivity"
             android:exported="false" />
         <activity
