--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,12 @@
 plugins {
     id 'com.android.application'
+    id "org.sonarqube" version "3.4.0.2513"
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "DMC"
+    }
 }
 
 android {
