--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,14 @@
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+    id "org.sonarqube" version "3.4.0.2513"
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "DMC"
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
