--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,15 @@ plugins {
     id 'com.android.application'
 }
 
+plugins {
+    id "org.sonarqube" version "3.4.0.2513"
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "DMC"
+    }
+}
 
 android {
     compileSdk 32
