--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.login=sqp_0c3cf25303b373beec986eb2cbbcd5115e9b789c
