--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,15 @@ plugins {
     id 'com.android.library' version '7.1.2' apply false
 }
 
+plugins {
+    id "org.sonarqube" version "3.4.0.2513"
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "DMC"
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
