--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     compileSdk 32
-
+    buildToolsVersion "30.0.2"
     defaultConfig {
         applicationId "com.barney.dmcprojectprayge"
         minSdk 21
@@ -41,4 +41,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+
 }
+
